--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,13 @@
+@font-face {
+  font-family: 'Noto Serif JP', serif;
+  src: url('../fonts/Noto_Serif_JP/NotoSerifJP-Regular.otf');
+}
+
 :root {
+  --secondary-bg-color: #333333;
+  --light-text-color: #f7f8f8;
+  --active-link-border: 2px solid #f7f8f8;
+  --logo-font: 'Noto Serif JP, serif';
   --system-ui: -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans",
@@ -20,8 +29,47 @@
 body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
+  font-family: var(--system-ui);
 }
 
 button {
   cursor: pointer;
+}
+
+header {
+  background: var(--secondary-bg-color);
+  color: var(--light-text-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 32px;
+  flex-wrap: wrap;
+  box-shadow: 2px 5px 5px -3px rgba(0, 0, 0, 0.52);
+}
+
+header>h1 {
+  font-size: 2.5rem;
+  font-style: italic;
+  font-family: var(--logo-font);
+  padding-bottom: 10px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+}
+
+li>a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.2rem;
+  padding: 8px 16px;
+  letter-spacing: 1.5px;
+  opacity: .5;
+}
+
+li.active>a {
+  cursor: default;
+  opacity: 1;
+  border-bottom: var(--active-link-border);
 }
