Add style to the home section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,9 +4,12 @@
 }
 
 :root {
+  --primary-bg-color: #fafafa;
   --secondary-bg-color: #333333;
+  --text-color: #1f2937;
   --light-text-color: #f7f8f8;
-  --active-link-border: 2px solid #f7f8f8;
+  --home-btn-color: #9c4040;
+  --active-home-btn: #cb5b5b;
   --logo-font: 'Noto Serif JP, serif';
   --system-ui: -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen",
@@ -30,6 +33,8 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   font-family: var(--system-ui);
+  background: var(--primary-bg-color);
+  color: var(--text-color);
 }
 
 button {
@@ -42,9 +47,11 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 16px 32px;
+  padding: 18px 32px;
   flex-wrap: wrap;
   box-shadow: 2px 5px 5px -3px rgba(0, 0, 0, 0.52);
+  position: sticky;
+  top: 0;
 }
 
 header>h1 {
@@ -66,10 +73,61 @@ li>a {
   padding: 8px 16px;
   letter-spacing: 1.5px;
   opacity: .5;
+  transition: 250ms;
 }
 
 li.active>a {
   cursor: default;
   opacity: 1;
-  border-bottom: var(--active-link-border);
+  border-bottom: 2px solid #f7f8f8;
+}
+
+main>section.home {
+  background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../images/parkBistro.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: calc(100vh - 114.5px);
+  color: var(--light-text-color);
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  justify-items: center;
+}
+
+.hero-container {
+  align-self: end;
+  text-align: center;
+  line-height: 1.7;
+  font-size: 1.3rem;
+  padding: 20px;
+}
+
+.hero-container>:nth-child(2) {
+  font-size: 1.75rem;
+  font-weight: 600;
+}
+
+.btn-container>button {
+  padding: 13px 23px;
+  background: transparent;
+  color: var(--light-text-color);
+  border: 2px solid #cacdd3;
+  border-radius: .25rem;
+  margin-right: 16px;
+  line-height: 1.25;
+  font-weight: 600;
+  font-size: 1.15rem;
+  transition: 250ms;
+}
+
+.btn-container>button:hover,
+.btn-container>button:focus-visible {
+  background: var(--home-btn-color);
+  border: 2px solid var(--home-btn-color);
+  transform: translateY(1px);
+}
+
+.btn-container>button:active {
+  background: var(--active-home-btn);
+  transform: translateY(0);
 }
