--- a/src/css/style.css
+++ b/src/css/style.css
@@ -131,3 +131,45 @@ main>section.home {
   background: var(--active-home-btn);
   transform: translateY(0);
 }
+
+section.menu>h2,
+.meal-category,
+.meal-item-heading {
+  text-align: center;
+  padding: 20px 0 8px;
+  font-family: var(--logo-font);
+  font-weight: 600;
+  font-style: italic;
+}
+
+section.menu>h2 {
+  font-size: 2.5rem;
+}
+
+.meal-category,
+.meal-item-heading {
+  font-size: 1.7rem;
+}
+
+.meal-category::after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 85%;
+  padding-top: 8px;
+  border-bottom: 2px solid #cacdd3;
+  border-radius: .25rem;
+}
+
+.meal-item {
+  padding: 0 20px 16px;
+}
+
+.meal-item-heading {
+  display: flex;
+  justify-content: space-between;
+}
+
+.meal-item>p {
+  width: 18.75em;
+}
