--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,6 +39,14 @@ body {
 
 button {
   cursor: pointer;
+  padding: 13px 23px;
+  border: 2px solid #cacdd3;
+  border-radius: .25rem;
+  margin-right: 16px;
+  line-height: 1.25;
+  font-weight: 600;
+  font-size: 1.15rem;
+  transition: 250ms;
 }
 
 header {
@@ -108,16 +116,8 @@ main>section.home {
 }
 
 .btn-container>button {
-  padding: 13px 23px;
   background: transparent;
   color: var(--light-text-color);
-  border: 2px solid #cacdd3;
-  border-radius: .25rem;
-  margin-right: 16px;
-  line-height: 1.25;
-  font-weight: 600;
-  font-size: 1.15rem;
-  transition: 250ms;
 }
 
 .btn-container>button:hover,
@@ -132,7 +132,7 @@ main>section.home {
   transform: translateY(0);
 }
 
-section.menu>h2,
+.section-header,
 .meal-category,
 .meal-item-heading {
   text-align: center;
@@ -142,13 +142,16 @@ section.menu>h2,
   font-style: italic;
 }
 
-section.menu>h2 {
+.section-header {
   font-size: 2.5rem;
 }
 
-.meal-category,
+.meal-category {
+  font-size: 2rem;
+}
+
 .meal-item-heading {
-  font-size: 1.7rem;
+  font-size: 1.65rem;
 }
 
 .meal-category::after {
@@ -172,4 +175,69 @@ section.menu>h2 {
 
 .meal-item>p {
   width: 18.75em;
+}
+
+.contact-info>p {
+  text-align: center;
+  line-height: 1.7;
+  font-size: 1.25rem;
+}
+
+.contact-info>p:first-of-type {
+  font-weight: 600;
+}
+
+form {
+  padding: 24px;
+}
+
+form>div:last-of-type {
+  padding: 32px 0 64px;
+}
+
+label {
+  font-size: 1.2rem;
+}
+
+input,
+textarea {
+  display: block;
+  font-size: 1.3rem;
+  outline: 0;
+  border: 2.5px solid #75797d;
+  border-radius: .25rem;
+  width: 100%;
+  margin: 10px 0;
+}
+
+input:focus,
+textarea:focus {
+  border: 2.5px solid #7597f7;
+}
+
+input {
+  padding: 5px 10px;
+}
+
+form>div:last-of-type {
+  display: flex;
+  justify-content: end;
+}
+
+.form-btn:disabled:hover,
+.form-btn:disabled:focus-visible {
+  background: var(--home-btn-color);
+  border: 2px solid var(--home-btn-color);
+  transform: translateY(1px);
+}
+
+.form-btn:disabled:active {
+  background: var(--active-home-btn);
+  transform: translateY(0);
+}
+
+.form-btn:disabled {
+  background: var(--secondary-bg-color);
+  color: var(--light-text-color);
+  border: 2px solid transparent;
 }
